--- a/hugo.toml
+++ b/hugo.toml
@@ -5,19 +5,19 @@ theme = 'm10c'
 
 [menu]
   [[menu.main]]
-    identifier = "home"
+    identifier = "Home"
     name = "Home"
     url = "/"
     weight = 1
   [[menu.main]]
-    identifier = "tags"
+    identifier = "Tags"
     name = "Tags"
     url = "/tags/"
     weight = 2
   [[menu.main]]
-    identifier = "about"
-    name = "About"
-    url = "/about/"
+    identifier = "Reading"
+    name = "Reading"
+    url = "/Reading/"
     weight = 3
     
 [params]
